@@ -9,5 +9,13 @@ layout: single
 
 * Moved ```node_headers``` inner classes to ```arrays.h```
 
+* Created ```node_marker``` object, for mark and sweep
+    (or just various mark applications).
+
+* Created ```dot_maker``` object in file ```io_dot.h```,
+    for creating dot files from MDDs.
+
+* TBD: removed or simplified forest methods
+
 ### Implementation
 
